openshift/network-policy/policies/allow-ctlog-to-trillian.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ctlog-to-trillian
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: trillian-logserver
      app.kubernetes.io/name: trillian-logserver
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: ctlog
              app.kubernetes.io/name: ctlog
