openshift/network-policy/policies/allow-fulcio-to-ctlog.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fulcio-to-ctlog
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: ctlog
      app.kubernetes.io/name: ctlog
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: fulcio-server
              app.kubernetes.io/name: fulcio-server
