openshift/network-policy/policies/allow-ingress-fulcio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-fulcio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: fulcio-server
      app.kubernetes.io/name: fulcio-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
