openshift/network-policy/policies/allow-ingress-rekor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-rekor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rekor-server
      app.kubernetes.io/name: rekor-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
