openshift/network-policy/policies/allow-ingress-tuf.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-tuf
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: tuf
      app.kubernetes.io/name: tuf
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
