openshift/network-policy/policies/allow-rekor-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rekor-to-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rekor-redis
      app.kubernetes.io/name: rekor-redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: rekor-server
              app.kubernetes.io/name: rekor-server
