openshift/network-policy/policies/allow-rekor-to-trillian.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rekor-to-trillian
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: trillian-logserver
      app.kubernetes.io/name: trillian-logserver
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: rekor-server
              app.kubernetes.io/name: rekor-server
