openshift/network-policy/policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: your-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
